--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  }
+  },
+  "name": "nextjs-blog",
+  "description": "This is a starter template for [Learn Next.js](https://nextjs.org/learn).",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "Tautvydas (https://github.com/Zukauskas)",
+  "license": "MIT"
 }
